Fix: Overflow text on post screen

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -188,7 +188,7 @@ a {
 
 .category {
   display: grid;
-  grid-template-columns: repeat(2, 2fr);
+  grid-template-columns: repeat(2, minmax(0, 2fr));
   grid-gap: 15px;
 
 }
@@ -224,7 +224,9 @@ a {
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(24,24,24,.25);
   z-index: 2;
+
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
@@ -262,8 +264,7 @@ a {
   height: 100px;
   padding: 10px 10px;
   border-radius: 5px;
-  word-wrap: break-word;         
-  white-space: normal;          
+  word-break: break-word;               
   overflow-y: hidden;
   text-overflow: ellipsis;
 }
